# aws-infrastructure

./: CODEOWNERS  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  docker-compose.yml  run_tests.sh
ci/: login.sh  update-pipeline-setter.sh  update-pipeline.sh
ci/config/: parameters-common.yml  parameters-dev.yml  parameters-pr-setting-config.yml  parameters-prod.yml  parameters-qa.yml  parameters-sbx.yml
ci/pipelines/: pipeline-setter.yml  pipeline-template-prs.yml  pipeline-with-tests.yml  pipeline.yml
ci/tasks/: deploy-layers.sh  deploy-python.sh  fetch-prs.sh  get-aws-keys.sh  jira-update.sh  run-pr.sh  run-pre-merge.sh  status-post-pr.sh  test-python.sh  update-lambda-layer-version.sh
src/ai_model_integration/: ai_model_integration.py
src/api_spec_getter/: api_spec_getter.py
src/collibra_api_integration/: collibra_api_integration.py
src/collibra_api_integration/tests/: test_collibra_api_integration.py
src/collibra_glue_integration/: collibra_glue_integration.py
src/collibra_hr_integration/: collibra_hr_integration.py
src/cross_account_event/: cross_account_event.py
src/gen_ai_business_term_integration/: gen_ai_business_term_integration.py
src/insights_reporting/: insights_reporting.py
src/nuc_kafka_sink_connector/: nuc_kafka_sink_connector.py
src/open_spec_authorizer/: open_spec_authorizer.py
src/send_teams_message_and_email/: send_teams_message_and_email.py
src/shared/: README.md  pyproject.toml  shared.py
src/shared/json/: openapi.json
src/shared/test_shared/: test_shared_auth.py
(+15 files in other folders)
