[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.32.0"
boto3 = "^1.34.133"
PyJWT = "^2.7.0"
cryptography = "3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
